# modbus-project

./: README.md
Documentation/: ModbusCommunication.docx
EthernetCommunication/Arduino/ArduinoModbusTest/: ArduinoModbusTest.ino
EthernetCommunication/Raspberry/Workspace/.metadata/: version.ini
EthernetCommunication/Raspberry/Workspace/.metadata/.mylyn/.taskListIndex/: segments_1
EthernetCommunication/Raspberry/Workspace/.metadata/.plugins/org.eclipse.cdt.make.core/: ModbusTCPTest.sc
EthernetCommunication/Raspberry/Workspace/.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
EthernetCommunication/Raspberry/Workspace/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
EthernetCommunication/Raspberry/Workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
EthernetCommunication/Raspberry/Workspace/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
EthernetCommunication/Raspberry/Workspace/ModbusTCPTest/: .cproject  CMakeLists.txt  Makefile
EthernetCommunication/Raspberry/Workspace/ModbusTCPTest/ModbusTCP/libModbus/include/: modbus.h
EthernetCommunication/Raspberry/Workspace/ModbusTCPTest/ModbusTCP/libModbus/src/: modbus-tcp.c  modbus.c
EthernetCommunication/Raspberry/Workspace/RPi2Test01/: .cproject  .project  Makefile
WifiCommunication/Raspberry/Workspace/ModbusTCPTest/: .project  projectclean.cmd
WifiCommunication/Raspberry/Workspace/ModbusTCPTest/ModbusTCPTest/: ModbusTCPTest.cpp
WifiCommunication/WeMos/WeMosWifiTest/WeMosWifiTest/: WeMosWifiTest.ino
(+37 files in other folders)
